<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayoutProfil"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:background="@drawable/layout_person_bg">

                <ImageView
                    android:id="@+id/imageViewProfil"
                    style="@style/ImageViewProfil"
                    android:contentDescription="@string/img_description_profil"
                    android:src="@drawable/img_profile_spechialist"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewProfil"
                    style="@style/TextViewProfil"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewProfil"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/toolbar" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:focusable="false">

            <TextView
                android:id="@+id/textViewPersonalData"
                style="@style/TextViewPersonalData"
                android:text="@string/personalData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewUnderName"
                style="@style/UnderInfoPersonData"
                android:layout_marginTop="32dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPersonalData" />

            <TextView
                android:id="@+id/textViewName"
                style="@style/InfoPersonData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnderName" />

            <TextView
                android:id="@+id/textViewUnderSurname"
                style="@style/UnderInfoPersonData"
                android:text="@string/surname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewSurname"
                style="@style/InfoPersonData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnderSurname" />

            <TextView
                android:id="@+id/textViewUnderEmail"
                style="@style/UnderInfoPersonData"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSurname" />

            <TextView
                android:id="@+id/textViewEmail"
                style="@style/InfoPersonData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnderEmail" />

            <TextView
                android:id="@+id/textViewUnderLogin"
                style="@style/UnderInfoPersonData"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

            <TextView
                android:id="@+id/textViewLogin"
                style="@style/InfoPersonData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnderLogin" />

            <TextView
                android:id="@+id/textViewUnderRegion"
                style="@style/UnderInfoPersonData"
                android:text="@string/your_region"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

            <TextView
                android:id="@+id/textViewRegion"
                style="@style/InfoPersonData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnderRegion" />

            <ImageButton
                android:id="@+id/imageButtonEditRegion"
                style="@style/ImageButtonEditCity"
                android:contentDescription="@string/img_description_edit_region"
                android:src="@drawable/ic_edit_black_24_px_copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewUnderRegion"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnderRegion" />

            <TextView
                android:id="@+id/textViewExitAccount"
                style="@style/textViewExitAccount"
                android:text="@string/exit_from_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRegion"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>

